# cgal-gsoc-2026-prep

./: CURRENT_STATUS.md  README.md
ci-analysis/: ci-status-analysis.md
phase1-foundation/: step1.4-python-bindings-exploration.md  step1.5-nano-binding-deep_dive.md
phase1-foundation/step1.1-environment-setup/: setup-log.md
phase1-foundation/step1.2-build-cgal/: build-notes.md
phase1-foundation/step1.3-master-arrangements/: part-a-theory.md  part-b-examples.md  part-d-architecture.md
phase2-contributions/step2.3-first-pr/testing/: test_methods.py
phase2-contributions/step2.6-precondition-framework/: implementation.md  test-results.md
phase3-research/: task3-named-params-study.md
phase3-research/docstring-approach-b/: README.md
phase3-research/proof-of-concept-operators/: CMakeLists.txt  PROPERTY_MAP_CHALLENGE.md  README.md
phase3-research/proof-of-concept-operators/include/CGALPY/operators/: Named_parameter_verbose.hpp
phase3-research/proof-of-concept-operators/include/CGALPY/tests/: test_operators.py
phase3-research/test-named-params-implementation/: CMakeLists.txt  README.md  test_binding.py
phase3-research/test-named-params-implementation/findings/: operator-patterns-discovered.md  questions-for-efi.md  visual-architecture.md
phase4-ci-infrastructure/: PHASE_4_5_IMPLEMENTATION.md  README.md  build-log.txt  ci-enhancement-plan.md  ci-research-feb4-2026.md  conan-profile-issue.md  email-to-efi-feb4.md
phase4-ci-infrastructure/ci-analysis/: ci-status-analysis.md
phase5-safety-framework/step5.1-original-framework/: implementation.md
phase5-safety-framework/step5.2-refactor-per-efi/: implementation.md  line857-investigation.md
research/crash-scenarios/: additional-crash-scenarios.md  test_crash_3_twin.py  test_crash_4_merge.py  test_crash_5_double_remove.py
research/docstring-location/: docstring-location-research.md
weeks1-2-parameter-naming/: implementation.md
(+43 files in other folders)
